--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <body>
     <%= render "layouts/header" %>
     <div class="container">
+      <% flash.each do |message_type, message| %> <!--flashはapplication.html.erbにかく-->
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %> <!--htmlとerbをミックス-->
+      <% end %>
       <%= yield %>
       <%= render "layouts/footer" %>
       <%= debug(params) if Rails.env.development? %><!--debug-->
