--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,13 @@
-<%= provide(:title, "User#index") %>
-<% @user.each do |user| %>
-  <%= user.name %>
-  <%= user.email %>
-<% end %>
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
+<%= will_paginate %><!--users#indexに.paginateメソッドを追加しないと使えない！-->
+
+<ul class="users">
+  <% @users.each do |user| %>
+    <li>
+      <%= gravatar_for user, size: 50 %>
+      <%= link_to user.name, user %>
+    </li>
+  <% end %>
+</ul>
+<%= will_paginate %><!--上下にページネーションをおくと便利！-->
